force-app/main/default/objects/ffct__BundleSubComponent__c/ffct__BundleSubComponent__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffct__bundlecomponentonlinehelp</customHelpPage>
    <description>Information about a bundle sub component.</description>
    <label>Bundle Sub Component</label>
    <nameField>
        <label>Bundle Sub Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Sub Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>