force-app/main/default/objects/ffct__BundleSubComponent__c/fields/ffct__BundleSubComponentName__c.field-meta.xml
<CustomField>
    <fullName>ffct__BundleSubComponentName__c</fullName>
    <description>Custom Name field added in order to cater with the need to store bigger sub component names.</description>
    <label>Bundle Sub Component Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>