force-app/main/default/objects/ffct__BundleSubComponent__c/fields/ffct__Filter_By_Name__c.field-meta.xml
<CustomField>
    <fullName>ffct__Filter_By_Name__c</fullName>
    <description>Contains name for FilterBy field</description>
    <label>Filter By</label>
    <type>TextArea</type>
</CustomField>