force-app/main/default/objects/ffct__BundleSubComponent__c/fields/ffct__FilterBy__c.field-meta.xml
<CustomField>
    <fullName>ffct__FilterBy__c</fullName>
    <description>stores the name of the recordtype,list view,fieldset...</description>
    <label>Filter By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>