force-app/main/default/objects/ffct__BundleSubComponent__c/fields/ffct__Type__c.field-meta.xml
<CustomField>
    <fullName>ffct__Type__c</fullName>
    <label>Type</label>
    <length>48</length>
    <type>Text</type>
</CustomField>